commit redeploy check

--- a/index.html
+++ b/index.html
@@ -13,5 +13,4 @@
   </body>
 </html>
 
-<!-- checking commit -->
-<!-- yes showing on github repo, commit successful, checking again -->
+<!-- checking commit after redeploy -->
