--- a/index.html
+++ b/index.html
@@ -13,5 +13,8 @@
   </body>
 </html>
 
-<!-- checking ediiting , saving , commiting -->
-<!-- checking again -->
+<!-- checking ediiting , saving from user B -->
+
+<!-- yes worked -->
+<!-- yes worked from user B also ---->
+<!-- checking commit from user B failed-->
