--- a/index.html
+++ b/index.html
@@ -13,8 +13,5 @@
   </body>
 </html>
 
-<!-- checking ediiting , saving from user B -->
 
-<!-- yes worked -->
-<!-- yes worked from user B also ---->
-<!-- checking commit from user B failed-->
+<!-- checking commit from user A -->
